# doc-flesh

./: .gitignore  README.md  pyproject.toml
assets/: template-flow.excalidraw
src/doc_flesh/: __init__.py  cli.py  configreader.py  git_utils.py  target_file_writer.py  uv_utils.py  writer.py
src/doc_flesh/configtools/: config_reader.py  generator.py  reader.py  siteinfo_generator.py
src/doc_flesh/models/: __init__.py  models.py  transformations.py
tests/: conftest.py  test_config_generator.py  test_config_reader.py  test_git_utils.py  test_target_file_writer.py  test_uv_utils.py
tests/data/: partial.siteinfo.json  valid.siteinfo.json
